# Advanced-DevOps-MasterClass

./: .gitignore  README.md
.github/workflows/: docker-build-push.yml  multi-stage-build-push-docker.yml
01-task-microservices/: .dockerignore  .env-example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
01-task-microservices/app/: book.py  configs.py  database.py  main.py  models.py  schemas.py
